# vasapy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
scripts/: clean_build.py
src/: byte_set.h  dict.cpp  set.cpp  vasapy.cpp
tests/: definitions.py  test.py  test_dict.py  test_set.py
vasapy/: __init__.py  dict.py  set.py
