[build-system]
requires = ["scikit-build-core>=0.4.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "vasapy"
version = "0.0.4"
description = "Vectorized ASsociative Arrays for PYthon"
authors = [{name = "Marco Salathe"}]
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[tool.scikit-build]
# Default configuration picks up CMakeLists.txt at the repository root.
